# FOL

./: .gitignore  FOL.cabal  README.md
examples/: Groups.hs
src/: Backend.hs  E.hs  FOL.hs  TheoryHelpers.hs  Vampire.hs
