name:                FOL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FOL#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     FOL, TheoryHelpers, Vampire, E, Backend
  build-depends:       base >= 4.7 && < 5,
                       process
  default-language:    Haskell2010
